--- a/Minion Says/Content.plist
+++ b/Minion Says/Content.plist
@@ -3,61 +3,61 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>1.jpg</string>
 		<key>text</key>
 		<string>Tatata bala tu!</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>2.jpg</string>
 		<key>text</key>
 		<string>Me want banana!</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>3.jpg</string>
 		<key>text</key>
 		<string>Po ka</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>4.jpg</string>
 		<key>text</key>
 		<string>Bananonina!</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>5.jpg</string>
 		<key>text</key>
 		<string>Bello</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>6.jpg</string>
 		<key>text</key>
 		<string>Butt</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>7.jpg</string>
 		<key>text</key>
 		<string>Bee do bee do bee do!</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>8.jpg</string>
 		<key>text</key>
 		<string>Tulaliloo ti amo!</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>9.jpg</string>
 		<key>text</key>
 		<string>Gelato</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>imageName</key>
 		<string>10.jpg</string>
 		<key>text</key>
 		<string>Poopaya</string>
